Examples/test-suite/errors/cpp_nested.i
%module xxx

class Foo {
public:
    class Bar {
    };
};

class Spam {
public:
    class Grok {
    } x;
};
